Quick fix on bulb class

--- a/pages/en/home.html
+++ b/pages/en/home.html
@@ -12,14 +12,14 @@ permalink: /
 		</div>
 		<div class="flex-container">
 			<div class="box" style="margin: 1em;">
-				<h2><div class="bulb">Who am I ?</div></h2>
+				<div class="bulb"><h2>Who am I ?</h2></div>
 					<p>
 						I am a French research engineer in computer science born in 1997. Since my preparatory class, I have been curious about the world of research. 
 						I am interested in the field of machine learning and data mining. But I have many other center of interrest and I am keen on learning new things !
 					</p>
 			</div>
 			<div class="box" style="margin: 1em;">
-				<h2><div class="bulb">Currently</div></h2>
+				<div class="bulb"><h2>Currently</h2></div>
 				<p>
 					I am working at the <a href="http://www-list.cea.fr/en/">CEA</a>, a company at the cutting edge of technological research and development, as a research engineer in the domain of machine learning.
 				</p>
@@ -29,7 +29,7 @@ permalink: /
 			<h2 style="margin-top: auto; border-bottom: 1px solid;">Skills</h2>
 			<div class="flex-container" style="flex-wrap: wrap;">
 				<div class="box" style="margin-left: auto; margin-right: auto; flex-flow: column;">
-					<h3 style="border-bottom: 0px solid; margin-top: auto;"><div class="bulb"><i class="fa fa-laptop" aria-hidden="true"></i> Programming languages :</div></h3>
+					<div class="bulb"><h3 style="border-bottom: 0px solid; margin-top: auto;"><i class="fa fa-laptop" aria-hidden="true"></i> Programming languages :</h3></div>
 					<ul style="list-style-type: none; margin-left: -1em;">
 						<li style="margin-bottom: 0.2em;">
 							<a href="https://github.com/cmoineau?tab=repositories&language=python" style="margin:1em;">
@@ -45,7 +45,7 @@ permalink: /
 								<img src="/ressources/c.png" alt="C logo" style="height: 1em; width: 1em; margin-right: 0.5em;"><b>C</b></a></li>
 					</ul>
 				</div><div class="box" style="margin-left: auto; margin-right: auto; flex-flow: column;">
-					<h3 style="border-bottom: 0px solid; margin-top: auto;"><div class="bulb"><i class="fa fa-language" aria-hidden="true"></i> Languages :</div></h3>
+					<div class="bulb"><h3 style="border-bottom: 0px solid; margin-top: auto;"><i class="fa fa-language" aria-hidden="true"></i> Languages :</h3></div>
 					<ul style="list-style-type: none; margin-left: -1em;">
 						<li style="margin-bottom: 0.5em;">
 							<img src="/ressources/fr_flag.png" alt="french flag" style="height: 1em; width: 1.5em; margin-right: 0.5em;"><b>French (Native level)</b></li>
@@ -56,7 +56,7 @@ permalink: /
 						
 					</ul>
 				</div><div class="box" style="margin-left: auto; margin-right: auto; flex-flow: column;">
-					<h3 style="border-bottom: 0px solid; margin-top: auto;"><div class="bulb"><i class="fa fa-graduation-cap" aria-hidden="true"></i> Main skills :</div></h3>
+					<div class="bulb"><h3 style="border-bottom: 0px solid; margin-top: auto;"><i class="fa fa-graduation-cap" aria-hidden="true"></i> Main skills :</h3></div>
 					<ul>
 						<li><b>Scientific writing</b></li>
 						<li><b>Software engineering</b></li>
