--- a/pages/fr/home.html
+++ b/pages/fr/home.html
@@ -12,14 +12,14 @@ permalink: /fr
 		</div>
 		<div class="flex-container">
 			<div class="box" style="margin: 1em;">
-				<h2><div class="bulb">Qui suis je ?</div></h2>
+				<div class="bulb"><h2>Qui suis je ?</h2></div>
 				<p>
 					Ingénieur chercheur en informatique. J'ai développé un intérêt pour le monde de la recherche grâce à mes deux ans d'études en classe préparatoire. 
 					Je suis passionné par l'apprentissage automatique et l'exploration de données. J'ai de nombreux centres d'intérêts et suis toujours enthousiaste à l'idée de pouvoir accumuler de nouvelles connaissances. 
 				</p>
 			</div>
 			<div class="box" style="margin: 1em;">
-				<h2><div class="bulb">Actuellement</div></h2>
+				<div class="bulb"><h2>Actuellement</h2></div>
 				<p>
 					Ingénieur chercheur au <a href="http://www-list.cea.fr/">CEA</a>, un organisme public à la pointe de la recherche et du développement.
 					Je travaille sur des thématique de réseaux de neuronnes.
@@ -31,7 +31,7 @@ permalink: /fr
 		<h2 style="margin-top: auto; border-bottom: 1px solid;">Compétences</h2>
 		<div class="flex-container"  style="flex-wrap: wrap;">
 			<div class="box" style="margin-left: auto; margin-right: auto; flex-flow: column;">
-				<h3 style="border-bottom: 0px solid; margin-top: auto;"><div class="bulb"><i class="fa fa-laptop" aria-hidden="true"></i> Langages de programmation</div></h3>
+				<div class="bulb"><h3 style="border-bottom: 0px solid; margin-top: auto;"><i class="fa fa-laptop" aria-hidden="true"></i> Langages de programmation</h3></div>
 				<ul style="list-style-type: none; margin-left: -1em;">
 					<li>
 						<a href="https://github.com/cmoineau?tab=repositories&language=python" style="margin:1em;">
@@ -50,7 +50,7 @@ permalink: /fr
 							<img src="/ressources/c.png" alt="C logo" style="height: 1em; width: 1em; margin-right: 0.5em;"><b>C</b></a></li>
 				</ul>
 			</div><div class="box" style="margin-left: auto; margin-right: auto; flex-flow: column;">
-				<h3 style="border-bottom: 0px solid; margin-top: auto;"><div class="bulb"><i class="fa fa-language" aria-hidden="true"></i> Langues</div></h3>
+				<div class="bulb"><h3 style="border-bottom: 0px solid; margin-top: auto;"><i class="fa fa-language" aria-hidden="true"></i> Langues</h3></div>
 				<ul style="list-style-type: none; margin-left: -1em;">
 					<li>
 						<img src="/ressources/fr_flag.png" alt="french flag" style="height: 1em; width: 1.5em; margin-right: 0.5em;"><b>French (Native level)</b></li>
@@ -61,7 +61,7 @@ permalink: /fr
 					
 				</ul>
 			</div><div class="box" style="margin-left: auto; margin-right: auto; flex-flow: column;">
-				<h3 style="border-bottom: 0px solid; margin-top: auto;"><div class="bulb"><i class="fa fa-graduation-cap" aria-hidden="true"></i> Compétences principales</div></h3>
+				<div class="bulb"><h3 style="border-bottom: 0px solid; margin-top: auto;"><i class="fa fa-graduation-cap" aria-hidden="true"></i> Compétences principales</h3></div>
 				<ul>
 					<li><b>Rédaction scientifique</b></li>
 					<li><b>Génie logiciel</b></li>
