--- a/pages/en/home.html
+++ b/pages/en/home.html
@@ -8,7 +8,7 @@ permalink: /
 	<div class="blurb">    
 		<div id="presentation">
 			<img src="/ressources/Cyril.jpg" alt="A photo of me"  style="float:right; width: 8em; height: 9.5em; margin-left: 30px; margin-right: 15%; border-radius: 5%; box-shadow: 2px 0px 6px black;">
-			<h1 class="main_title" style="float: left;">Cyril MOINEAU</h1>
+			<h1 class="main_title">Cyril MOINEAU</h1>
 		</div>
 		<div class="flex-container">
 			<div class="box" style="margin: 1em;">
