Update education 404 error.

--- a/pages/en/work_experience.html
+++ b/pages/en/work_experience.html
@@ -8,7 +8,7 @@ permalink: /work_experiences
 	<div class="blurb">
 		<h1>My work experiences</h1>
 </p>
-		<p>If you want to see my academic career you can click <a href="/education/">here</a>.</p>
+		<p>If you want to see my academic career you can click <a href="/education">here</a>.</p>
 		<h2 style="text-align: left">Summary :</h2>
 		<ul>
 			<li><a href="#cea">CEA list</a></li>
