--- a/pages/fr/work_experience.html
+++ b/pages/fr/work_experience.html
@@ -44,7 +44,7 @@ permalink: /work_experiences/fr
 			<h3>Informations générales</h3>
 			<ul style="list-style-type: none;">
 				<li><i class="fa fa-calendar" aria-hidden="true"></i><b> Date :</b> Novembre 2019 - Juillet 2020</li>
-				<li><i class="fa fa-clock-o" aria-hidden="true"></i></i><b> Durée :</b> 8 mois</li>
+				<li><i class="fa fa-clock-o" aria-hidden="true"></i><b> Durée :</b> 8 mois</li>
 				<li><i class="fa fa-building-o" aria-hidden="true"></i><b> Entreprise :</b> <a href="http://www.irisa.fr/">IRISA</a></li>
 				<li><i class="fa fa-map-marker" aria-hidden="true"></i><b> Lieux :</b> Lannion, France</li>
 				<li><i class="fa fa-graduation-cap" aria-hidden="true"></i><b> Aptitudes développées :</b> Python, Recherche, Rédaction, Logique Floue, IA Symbolique, Flask, Docker</li>
@@ -87,7 +87,7 @@ permalink: /work_experiences/fr
 			<h3>Informations générales</h3>
 			<ul style="list-style-type: none;">
 				<li><i class="fa fa-calendar" aria-hidden="true"></i><b> Date :</b> Juin 2019 - Août 2019</li>
-				<li><i class="fa fa-clock-o" aria-hidden="true"></i></i><b> Durée :</b> 2 mois</li>
+				<li><i class="fa fa-clock-o" aria-hidden="true"></i><b> Durée :</b> 2 mois</li>
 				<li><i class="fa fa-building-o" aria-hidden="true"></i><b> Entreprise :</b> <a href="https://www.nctu.edu.tw/en/">National Chiao Tung University</a></li>
 				<li><i class="fa fa-map-marker" aria-hidden="true"></i><b> Lieux :</b> Hsinchu, Taïwan</li>
 				<li><i class="fa fa-graduation-cap" aria-hidden="true"></i><b> Aptitudes développées :</b> Python, Keras, Anglais</li>
@@ -116,7 +116,7 @@ permalink: /work_experiences/fr
 			<h3>Informations générales</h3>
 			<ul style="list-style-type: none;">
 				<li><i class="fa fa-calendar" aria-hidden="true"></i><b> Date :</b> Juillet 2018 - Août 2018</li>
-				<li><i class="fa fa-clock-o" aria-hidden="true"></i></i><b> Durée :</b> 2 mois</li>
+				<li><i class="fa fa-clock-o" aria-hidden="true"></i><b> Durée :</b> 2 mois</li>
 				<li><i class="fa fa-building-o" aria-hidden="true"></i><b> Entreprise :</b> <a href="http://www.orleans-metropole.fr/">Orléans Métropole</a></li>
 				<li><i class="fa fa-map-marker" aria-hidden="true"></i><b> Lieux :</b> Orléans, France</li>
 				<li><i class="fa fa-graduation-cap" aria-hidden="true"></i><b> Aptitudes développées :</b> Shell Script, Réseaux, Linux</li>
