--- a/pages/en/work_experience.html
+++ b/pages/en/work_experience.html
@@ -7,7 +7,6 @@ permalink: /work_experiences
 ---
 	<div class="blurb">
 		<h1>My work experiences</h1>
-</p>
 		<p>If you want to see my academic career you can click <a href="/education">here</a>.</p>
 		<h2 style="text-align: left">Summary :</h2>
 		<ul>
@@ -85,7 +84,7 @@ permalink: /work_experiences
 			<h3>General informations</h3>
 			<ul style="list-style-type: none;">
 				<li><i class="fa fa-calendar" aria-hidden="true"></i><b> Date :</b> June 2019 - August 2019</li>
-				<li><i class="fa fa-clock-o" aria-hidden="true"></i></i><b> Duration :</b> 2 months</li>
+				<li><i class="fa fa-clock-o" aria-hidden="true"></i><b> Duration :</b> 2 months</li>
 				<li><i class="fa fa-building-o" aria-hidden="true"></i><b> Company :</b> <a href="https://www.nctu.edu.tw/en/">National Chiao Tung University</a></li>
 				<li><i class="fa fa-map-marker" aria-hidden="true"></i><b> Location :</b> Hsinchu, Taïwan</li>
 				<li><i class="fa fa-search" aria-hidden="true"></i><b> Skills developed :</b> Python, Keras, English</li>
@@ -113,7 +112,7 @@ permalink: /work_experiences
 			<h3>General informations</h3>
 			<ul style="list-style-type: none;">
 				<li><i class="fa fa-calendar" aria-hidden="true"></i><b> Date :</b> July 2018 - August 2018</li>
-				<li><i class="fa fa-clock-o" aria-hidden="true"></i></i><b> Duration :</b> 2 months</li>
+				<li><i class="fa fa-clock-o" aria-hidden="true"></i><b> Duration :</b> 2 months</li>
 				<li><i class="fa fa-building-o" aria-hidden="true"></i><b> Company :</b> <a href="http://www.orleans-metropole.fr/">Orléans Métropole</a></li>
 				<li><i class="fa fa-map-marker" aria-hidden="true"></i><b> Location :</b> Orléans, France</li>
 				<li><i class="fa fa-search" aria-hidden="true"></i><b> Skills developed :</b> Shell Script, Network, Centreon, Linux</li>
