Fixing mobile bug.

--- a/_posts/2019-01-01-bomberball-en.html
+++ b/_posts/2019-01-01-bomberball-en.html
@@ -4,7 +4,7 @@ title: "Bomberball"
 image: /ressources/logoBomberBall.png
 lang: "en"
 ref: bomberball
-tags: [project, dev]
+tags: [school, dev]
 ---
 
 <h2>BomberBall</h2>
