--- a/_posts/2019-03-30-adackathon-en.html
+++ b/_posts/2019-03-30-adackathon-en.html
@@ -4,7 +4,7 @@ title: "Ada Lovelace - Hacakthon"
 image: /ressources/adackathon.png
 lang: "en"
 ref: adackathon
-tags: [project, management]
+tags: [social, management]
 ---
 
 <h2>Ada Lovelace & Hacakthon ENSSAT (2019)</h2>
