--- a/_posts/2019-03-30-adackathon-fr.html
+++ b/_posts/2019-03-30-adackathon-fr.html
@@ -4,7 +4,7 @@ title: "Ada Lovelace - Hacakthon"
 image: /ressources/adackathon.png
 lang: "fr"
 ref: adackathon
-tags: [projet, management]
+tags: [social, management]
 ---
 <h2>Ada Lovelace & Hacakthon ENSSAT (2019)</h2>
     <p>
