--- a/_posts/2019-01-01-bomberball-fr.html
+++ b/_posts/2019-01-01-bomberball-fr.html
@@ -4,7 +4,7 @@ title: "Bomberball"
 image: /ressources/logoBomberBall.png
 lang: "fr"
 ref: bomberball
-tags: [projet, dev]
+tags: [école, dev]
 ---
 
 <h2>Projet BomberBall</h2>
