--- a/pages/en/projects.html
+++ b/pages/en/projects.html
@@ -20,6 +20,40 @@ permalink: /projects
 					<img class=post_image src="{{ post.image }}">
 					<div class=post_text>
 						<p class=post_title>{{ post.title }}</p>
+
+
+						<div class="post_description">
+							<div>
+								<i class="fa fa-clock-o" aria-hidden="true"></i> Date :
+								{% assign m = post.date | date: "%-m" %}
+								{{ post.date | date: "%-d" }}
+								{% case m %}
+								{% when '1' %}Janvier
+								{% when '2' %}Février
+								{% when '3' %}Mars
+								{% when '4' %}Avril
+								{% when '5' %}Mai
+								{% when '6' %}Juin
+								{% when '7' %}Juillet
+								{% when '8' %}Août
+								{% when '9' %}Septembre
+								{% when '10' %}Octobre
+								{% when '11' %}Novembre
+								{% when '12' %}Decembre
+								{% endcase %}
+								{{ post.date | date: "%Y" }}
+							</div>
+							<div>
+								<i class="fa fa-tags" aria-hidden="true"></i> Tags : |
+								{% for tag in post.tags %}
+										{{ tag }} |
+								{% endfor %}
+							</div>	
+						</div>
+
+
+
+
 					</div> 
 				</div>
 				</a>
