--- a/pages/en/work_experience.html
+++ b/pages/en/work_experience.html
@@ -17,7 +17,7 @@ permalink: /work_experiences
 		</ul>
 
 		<div class="box">
-			<h2 id="cea">CEA list</h2>
+			<div class="bulb"><h2 id="cea">CEA list</h2></div>
 			<img class="center" src="/ressources/cea.jpg" alt="CEA Logo" style="width: 8em; height: 8em; box-shadow: 2px 0px 6px black;">
 	
 			<h3>General informations</h3>
@@ -38,7 +38,7 @@ permalink: /work_experiences
 		</div>
 		
 		<div class="box">
-			<h2 id="irisa">Internship in the team SHAMAN of the IRISA 2020</h2>
+			<div class="bulb"><h2 id="irisa">Internship in the team SHAMAN of the IRISA 2020</h2></div>
 			<img class="center" src="/ressources/irisa.jpg" alt="IRISA Logo" style="width: 14em; height: 4em; box-shadow: 2px 0px 6px black;">
 
 			<h3>General informations</h3>
@@ -78,7 +78,7 @@ permalink: /work_experiences
 			</p>
 		</div>
 		<div class="box">
-			<h2 id="NCTU">Internship at the NCTU 2019</h2>
+			<div class="bulb"><h2 id="NCTU">Internship at the NCTU 2019</h2></div>
 			<img class="center" src="/ressources/NCTU.jpg" alt="NCTU Logo" style="width: 8em; height: 8em; border-radius: 50%; box-shadow: 2px 0px 6px black;">
 
 			<h3>General informations</h3>
@@ -106,7 +106,7 @@ permalink: /work_experiences
 			</p>
 		</div>
 		<div class="box">
-			<h2 id="Metropole">Orléans Métropole 2018</h2>
+			<div class="bulb"><h2 id="Metropole">Orléans Métropole 2018</h2></div>
 			<img class="center" src="/ressources/orleans_metropole.jpg" alt="Orleans Metropole Logo" style="width: 8em; height: 8em; box-shadow: 2px 0px 6px black;">
 
 			<h3>General informations</h3>
