--- a/pages/fr/work_experience.html
+++ b/pages/fr/work_experience.html
@@ -18,7 +18,7 @@ permalink: /work_experiences/fr
 		</ul>
 
 		<div class="box">
-			<h2 id="cea">CEA LIST</h2>
+			<div class="bulb"><h2 id="cea">CEA LIST</h2></div>
 			<img class="center" src="/ressources/cea.jpg" alt="Logo CEA" style="width: 8em; height: 8em; box-shadow: 2px 0px 6px black;">
 	
 			<h3>General informations</h3>
@@ -39,7 +39,7 @@ permalink: /work_experiences/fr
 
 	
 	<div class="box">
-		<h2 id="irisa">Stage dans l'équipe SHAMAN de l'IRISA 2020</h2>
+		<div class="bulb"><h2 id="irisa">Stage dans l'équipe SHAMAN de l'IRISA 2020</h2></div>
 		<img class="center" src="/ressources/irisa.jpg" alt="Logo IRISA" style="width: 14em; height: 4em; box-shadow: 2px 0px 6px black;">
 			<h3>Informations générales</h3>
 			<ul style="list-style-type: none;">
@@ -81,7 +81,7 @@ permalink: /work_experiences/fr
 			</p>
 	</div>
 	<div class="box">
-		<h2 id="NCTU">Stage à la NCTU 2019</h2>
+		<div class="bulb"><h2 id="NCTU">Stage à la NCTU 2019</h2></div>
 		<img class="center" src="/ressources/NCTU.jpg" alt="Logo NCTU" style="width: 8em; height: 8em; border-radius: 50%; box-shadow: 2px 0px 6px black;">
 
 			<h3>Informations générales</h3>
@@ -110,7 +110,7 @@ permalink: /work_experiences/fr
     		</p>
 	</div>		
 	<div class="box">
-		<h2 id="Metropole">Stage à Orléans Métropole 2018</h2>
+		<div class="bulb"><h2 id="Metropole">Stage à Orléans Métropole 2018</h2></div>
 		<img class="center" src="/ressources/orleans_metropole.jpg" alt="Logo Orléans Métropole" style="width: 8em; height: 8em; box-shadow: 2px 0px 6px black;">
 
 			<h3>Informations générales</h3>
